# SummerUniversity2024

cuda/practicals/diffusion/: AscentAdaptor.h  CMakeLists.txt  CatalystAdaptor.h  HowToRun_desktop.txt  VTKmAdaptor.h  ViskoresAdaptor.h  catalyst_pipeline.py  diffusion2d.cu  diffusion2d_mpi.cu  run_ascent.sh  run_catalyst.sh  run_viskores.sh  run_vtkm.sh
cuda/practicals/include/: util.hpp
cuda/practicals/miniapp/: AscentAdaptor.cu  AscentAdaptor.h  CMakeLists.txt  CatalystAdaptor.cu  CatalystAdaptor.h  How_to_Compile.txt  ascent_actions.yaml  catalyst_state.py  data.h  main.cu
